--- a/kelompok4.html
+++ b/kelompok4.html
@@ -259,12 +259,8 @@
 <br>
 <br>
 </div>
-<br>
-
-<br>
 
 
-<!--menampilkan video youtube museum BI--> 
 
 
 <!--membuat footer dimana isi footernya ada icon sosmed museum BI seperti contoh pada websitenya-->
@@ -275,7 +271,7 @@
     
     <a href="https://www.facebook.com/MuseumBI/">
     <i class="fab fa-facebook fa-xl"></i> </a>
-    <a href="https://www.youtube.com/user/BankIndonesiaChannel"></a>
+    <a href="https://www.youtube.com/user/BankIndonesiaChannel">
     <i class="fab fa-youtube fa-xl"></i> </a>
     <a href="https://twitter.com/bank_indonesia">
     <i class="fab fa-x-twitter fa-xl"></i></a>
