--- a/kelompok4.html
+++ b/kelompok4.html
@@ -266,6 +266,7 @@
 <!--membuat footer dimana isi footernya ada icon sosmed museum BI seperti contoh pada websitenya-->
 
 <!--Footer-->
+<br>
 <footer>
   <div class="footer"> 
     
@@ -283,9 +284,22 @@
     <i class="fab fa-app-store-ios fa-xl"></i> </a>
     <a href="https://www.tiktok.com/@bank_indonesia">
     <i class="fab fa-tiktok fa-xl"></i> </a>
-
+<br>
+<br>
+<p class="Namakel">Anggota Kelompok 4</p>
+<p class="Namakel"> 1. Azzirah Syahrani (11210251000043).
+  <br>
+    2. Viska Mia Sari (11210251000101).
+    <br>
+    3. Aimar Moussa Priyatno (11210251000103).
+    <br>
+    4. Danishvara Ramardhi Adhi (11210251000104).
+    <br>
+    5. Izza Kinta Ufia (11210251000115).
+</p>
 
 </div>
+
 </footer>
 </body>
 </html>
